--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/CSRFLoginAttack.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/CSRFLoginAttack.yaml
@@ -1,10 +1,13 @@
 id: CSRF_LOGIN_ATTACK
 info:
   name: "CSRF Login attack"
-  description: "CSRF Login attack"
+  description: "Hackers trick users to log into their account by forging requests, exploiting server authentication."
   details: >
-            "Replace CSRF"
-  impact: "Broken User authentication is a serious vulnerability. Attackers can gain control to other users’ accounts in the system, read their personal data, and perform sensitive actions on their behalf, like money transactions and sending personal messages."
+            "A login CSRF attack involves hackers tricking users into logging into an attacker-controlled account."
+            "By forging a request using their credentials and submitting it to the victim's browser, the server mistakenly authenticates the request, granting access to the attacker's account."
+  impact: >
+    "Depending on the user account and information exposed, the impacts of an attack range from mild to severe."
+    "Some consequences of a successful login CSRF attack include: Deployment of malicious code, Unauthorized financial transactions and Data breach and sensitive information exposure"
   category:
     name: NO_AUTH
     shortName: Broken Authentication
@@ -16,10 +19,8 @@ info:
     - OWASP top 10
     - HackerOne top 10
   references:
-    - "https://owasp.org/www-project-web-security-testing-guide/v42/4-Web_Application_Security_Testing/"
-    - "https://github.com/OWASP/API-Security/blob/master/2019/en/src/0xa2-broken-user-authentication.md"
-    - "https://cheatsheetseries.owasp.org/cheatsheets/Authentication_Cheat_Sheet.html"
-    - "https://cwe.mitre.org/data/definitions/798.html"
+    - "https://crashtest-security.com/csrf-login-attack/"
+    - "https://www.invicti.com/web-vulnerability-scanner/vulnerabilities/cross-site-request-forgery-in-login-form-invicti/"
 
 api_selection_filters:
   response_code:
