--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/OpenRedirect.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/OpenRedirect.yaml
@@ -55,6 +55,7 @@ execute:
           payload_location_key: http://evil.com/?p=${payload_location_value}
       - modify_header:
           payload_location_key: http://evil.com/?p=${payload_location_value}
+      - follow_redirect: false
 
 
 validate:
