--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlIntrospectionEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlIntrospectionEnabled.yaml
@@ -1,10 +1,13 @@
 id: GRAPHQL_INTROSPECTION_MODE_ENABLED
 info:
   name: "Graphql Introspection Mode Enabled"
-  description: "An attacker can retrieve the Graphql schema"
+  description: "GraphQL introspection mode vulnerability allows unauthorized access to schema details, potentially exposing sensitive data and increasing attack surface."
   details: > 
-            "cvbgfdhsjakmdjnhfdjnbfhdnjsk sdfgbfvdcsd"
-  impact: "bxcnvhncxmjdhfnjsjdhnjsdhefdnjsm hndfjnhdbsnj"
+            "GraphQL introspection mode enabled vulnerability refers to a security weakness in GraphQL implementations that arises when the introspection functionality is improperly configured. Introspection is a feature in GraphQL that allows clients to query the server for information about its schema, including available types, fields, and their respective arguments. While introspection is useful for documentation and client development, leaving it enabled in production environments can pose serious risks."
+            "When the introspection mode is enabled without proper access control measures, it becomes a potential entry point for attackers. By sending a specially crafted introspection query, an unauthorized user can obtain detailed information about the GraphQL schema and the underlying data model. This exposes sensitive details, such as the names of database tables, fields, and their types, which can aid attackers in planning more targeted and effective attacks.""
+            "The consequences of this vulnerability can be severe. Attackers can leverage the exposed schema information to identify potential injection points, understand data relationships, and craft malicious queries to extract sensitive data or perform unauthorized operations. Additionally, the increased attack surface can lead to other vulnerabilities, including data leakage, unauthorized data modification, denial of service, or remote code execution.""
+            "To mitigate this vulnerability, it is crucial to properly configure access controls and restrict introspection to authorized clients or development environments. Disabling introspection in production is generally recommended, as it minimizes the exposure of sensitive information to potential attackers. Regular security audits and penetration testing can help identify misconfigurations or vulnerabilities related to GraphQL introspection, ensuring the protection of sensitive data and maintaining a secure GraphQL implementation."
+  impact: "Sensitive data exposure, unauthorized access, and increased attack surface due to GraphQL introspection mode vulnerability."
   category:
     name: SM
     shortName: Misconfiguration
@@ -12,6 +15,7 @@ info:
   subCategory: GRAPHQL_INTROSPECTION_MODE_ENABLED
   severity: HIGH
   tags:
+    - Graphql
     - Business logic
     - OWASP top 10
     - HackerOne top 10
@@ -19,17 +23,17 @@ info:
     - "https://www.apollographql.com/blog/graphql/security/why-you-should-disable-graphql-introspection-in-production/"
 
 api_selection_filters:
-  response_code:
-    gte: 200
+  url:
+    regex: graphql
 
 execute:
   type: single
   requests:
     - req:
       - modify_url:
-        regex_replace:
-          regex: graphql.*
-          replace_with: graphql
+          regex_replace:
+            regex: graphql.*
+            replace_with: graphql
       - replace_body: '{ "query": "query IntrospectionQuery { __schema { queryType { name } mutationType { name } types { ...FullType } directives { name description locations args { ...InputValue } } } } fragment FullType on __Type { kind name description fields(includeDeprecated: true) { name description args { ...InputValue } type { ...TypeRef } isDeprecated deprecationReason } inputFields { ...InputValue } interfaces { ...TypeRef } enumValues(includeDeprecated: true) { name description isDeprecated deprecationReason } possibleTypes { ...TypeRef } } fragment InputValue on __InputValue { name description type { ...TypeRef } defaultValue } fragment TypeRef on __Type { kind name ofType { kind name ofType { kind name ofType { kind name ofType { kind name ofType { kind name ofType { kind name ofType { kind name } } } } } } } }" }'
 
 validate:
