--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlDebugModeEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlDebugModeEnabled.yaml
@@ -15,12 +15,14 @@ info:
   subCategory: GRAPHQL_DEBUG_MODE_ENABLED
   severity: HIGH
   tags:
-    - Graphql
+    - GraphQL
     - Business logic
     - OWASP top 10
     - HackerOne top 10
   references:
-    - "https://www.apollographql.com/blog/graphql/security/why-you-should-disable-graphql-introspection-in-production/"
+    - "https://nostarch.com/black-hat-graphql Chapter 6 - Information Disclosure"
+    - "https://cheatsheetseries.owasp.org/cheatsheets/GraphQL_Cheat_Sheet.html"
+    - "https://0xn3va.gitbook.io/cheat-sheets/web-application/graphql-vulnerabilities"
 
 api_selection_filters:
   url:
