--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlDevelopmentConsoleExposed.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlDevelopmentConsoleExposed.yaml
@@ -1,22 +1,30 @@
 id: GRAPHQL_DEVELOPMENT_CONSOLE_EXPOSED
 info:
   name: "Graphql Development Console Exposed"
-  description: "Type introspection allowed"
+  description: "Exposed GraphQL development console allows type introspection, increasing the risk of security vulnerabilities and unauthorized access"
   details: > 
-            "cvbgfdhsjakmdjnhfdjnbfhdnjsk sdfgbfvdcsd"
-  impact: "bxcnvhncxmjdhfnjsjdhnjsdhefdnjsm hndfjnhdbsnj"
+          The GraphQL Development Console Exposed vulnerability arises when the GraphQL development console, such as GraphiQL, GraphQL Playground, or
+          GraphQL Console, allows type introspection.Type introspection enables clients to retrieve detailed information about the GraphQL schema, 
+          including available types, fields, and their relationships. Exposing this feature in a production environment can lead to security 
+          vulnerabilities by providing unauthorized users with insights into the data model and potentially sensitive information. The impact 
+          includes an increased risk of unauthorized access and potential data exposure through the exposed GraphQL development console,
+          necessitating proper configuration and access control measures.
+  impact: "Increased risk of unauthorized access and potential data exposure through the exposed GraphQL development console."
   category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
   subCategory: GRAPHQL_DEVELOPMENT_CONSOLE_EXPOSED
-  severity: HIGH
+  severity: LOW
   tags:
+    - GraphQL
     - Business logic
     - OWASP top 10
     - HackerOne top 10
   references:
-    - "https://www.apollographql.com/blog/graphql/security/why-you-should-disable-graphql-introspection-in-production/"
+    - "https://nostarch.com/black-hat-graphql Chapter 6 - Information Disclosure"
+    - "https://cheatsheetseries.owasp.org/cheatsheets/GraphQL_Cheat_Sheet.html"
+    - "https://0xn3va.gitbook.io/cheat-sheets/web-application/graphql-vulnerabilities"
 
 api_selection_filters:
   url:
@@ -29,11 +37,12 @@ execute:
       - modify_url:
           regex_replace:
             regex: graphql.*
-            replace_with: graphql
-      - replace_body: '{ "query": "query { __type(name:\"Query\") { name } }" }'
+            replace_with: graphiql
 
 validate:
   response_payload:
-    contains_all: 
-      - "data"
-      - "__type"
+    contains_either:
+      - "GraphiQL"
+      - "GraphQL Playground"
+      - "GraphQL Console"
+      - "graphql-playground"
