--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlIntrospectionEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlIntrospectionEnabled.yaml
@@ -15,11 +15,14 @@ info:
   subCategory: GRAPHQL_INTROSPECTION_MODE_ENABLED
   severity: HIGH
   tags:
-    - Graphql
+    - GraphQL
     - Business logic
     - OWASP top 10
     - HackerOne top 10
   references:
+    - "https://nostarch.com/black-hat-graphql Chapter 6 - Information Disclosure"
+    - "https://cheatsheetseries.owasp.org/cheatsheets/GraphQL_Cheat_Sheet.html"
+    - "https://0xn3va.gitbook.io/cheat-sheets/web-application/graphql-vulnerabilities"
     - "https://www.apollographql.com/blog/graphql/security/why-you-should-disable-graphql-introspection-in-production/"
 
 api_selection_filters:
