--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlTypeIntrospectionAllowed.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlTypeIntrospectionAllowed.yaml
@@ -14,13 +14,15 @@ info:
   subCategory: GRAPHQL_TYPE_INTROSPECTION_ALLOWED
   severity: HIGH
   tags:
-    - Graphql
+    - GraphQL
     - Business logic
     - OWASP top 10
     - HackerOne top 10
   references:
+    - "https://nostarch.com/black-hat-graphql Chapter 6 - Information Disclosure"
+    - "https://cheatsheetseries.owasp.org/cheatsheets/GraphQL_Cheat_Sheet.html"
+    - "https://0xn3va.gitbook.io/cheat-sheets/web-application/graphql-vulnerabilities"
     - "https://www.apollographql.com/blog/graphql/security/why-you-should-disable-graphql-introspection-in-production/"
-    - "https://blackhatgraphql.com/"
 
 api_selection_filters:
   url:
