--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlDebugModeEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/GraphqlDebugModeEnabled.yaml
@@ -3,10 +3,15 @@ info:
   name: "Graphql Debug Mode Enabled"
   description: "GraphQL debug mode enabled vulnerability exposes sensitive debug information, increasing the risk of data leakage and potential security breaches"
   details: > 
-            "GraphQL debug mode enabled vulnerability refers to a security risk that arises when the debug mode in GraphQL is left enabled in production environments." 
-            "Debug mode is intended for development and debugging purposes, providing detailed error messages and stack traces to aid in troubleshooting. However, when enabled in a live production system, it can expose sensitive information to potential attackers." 
-            "The detailed error messages may inadvertently disclose implementation details, internal system paths, or sensitive data, increasing the risk of data leakage and potential security breaches. To mitigate this vulnerability, it is crucial to disable debug mode in production environments and ensure that only essential error messages are exposed to clients." 
-            "Regular security audits and secure coding practices should be employed to protect sensitive information."
+            GraphQL debug mode enabled vulnerability refers to a security risk that arises when the 
+            debug mode in GraphQL is left enabled in production environments. Debug mode is intended 
+            for development and debugging purposes, providing detailed error messages and stack traces 
+            to aid in troubleshooting. However, when enabled in a live production system, it can expose 
+            sensitive information to potential attackers. The detailed error messages may inadvertently 
+            disclose implementation details, internal system paths, or sensitive data, increasing the risk 
+            of data leakage and potential security breaches. To mitigate this vulnerability, it is crucial 
+            to disable debug mode in production environments and ensure that only essential error messages 
+            are exposed to clients. Regular security audits and secure coding practices should be employed to protect sensitive information.
   impact: "Data leakage and increased security risks from GraphQL debug mode vulnerability"
   category:
     name: SM
