--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/StrutsDebugModeEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/StrutsDebugModeEnabled.yaml
@@ -1,27 +1,30 @@
 id: STRUTS_DEBUG_MODE_ENABLED
 info:
   name: Struts Debug Mode Enabled 
-  description: "The error response contains information related to urls which may help in more sophisticated attacks"
+  description: "Struts debug mode enabled misconfiguration can expose sensitive information, potentially leading to security vulnerabilities."
   details: >
-            "The endpoint appears to be give out information related to endpoints existing in the application, on trying an invalid request, possibly due to DJANGO DEBUG mode being enabled. The original request
-            was replayed by modifying the url with an invalid value.
-            "<b>Background:</b> Inconsistencies in error messages can reveal important clues on how a site works, 
-            and what information is present under the covers.
-  impact: "This information can be used to facilitate more sophisticated attacks on your application"
-  category:
-    name: 
-    shortName: VEM
-    displayName: Verbose Error Messages (VEM)
-  subCategory: DJANGO_URL_EXPOSED
+          The Struts Debug Mode Enabled misconfiguration occurs when the Apache Struts framework is 
+          configured to run in debug mode, allowing detailed debugging information to be displayed in
+          error responses. This can expose sensitive information, such as stack traces, internal 
+          paths, and configuration details, to potential attackers. By analyzing the debug output, 
+          attackers can gain insights into the application's structure and potentially exploit 
+          vulnerabilities. This misconfiguration falls under the Security Misconfiguration category 
+          and has a low severity level. Properly disabling debug mode is crucial to prevent 
+           information disclosure and enhance the overall security of the application.
+  impact: "Exposing Struts debug mode can disclose sensitive information, increasing the risk of security vulnerabilities and potential attacks."
+ category:
+    name: SM
+    shortName: Misconfiguration
+    displayName: Security Misconfiguration (SM)
+  subCategory: STRUTS_DEBUG_MODE_ENABLED
   severity: LOW
   tags: 
     - Business logic
     - OWASP top 10
     - HackerOne top 10
   references:
-    - "https://owasp.org/www-community/Improper_Error_Handling"
-    - "https://owasp.org/www-project-web-security-testing-guide/v42/4-Web_Application_Security_Testing/08-Testing_for_Error_Handling/01-Testing_For_Improper_Error_Handling"
-    - "https://hackerone.com/reports/1033423"
+    - "https://owasp.org/Top10/A05_2021-Security_Misconfiguration/"
+    - "https://struts.apache.org/core-developers/development-mode"
 
 api_selection_filters:
   response_code:
@@ -34,8 +37,10 @@ execute:
   type: single
   requests:
     - req:
-      - modify_url: ${urlVar}testInvalidUrl
+      - modify_url: ${urlVar}
 
 validate:
   response_payload:
-    contains_either: "Django tried these url patterns"
+    contains_all: 
+      - "<debug>"
+      - "<struts.actionMapping>"
