--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ASPDebugModeEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/ASPDebugModeEnabled.yaml
@@ -1,21 +1,20 @@
 id: ASP_DEBUG_MODE_ENABLED
 info:
   name: ASP.NET Debug Mode Enabled 
-  description: "Rails debug mode enabled misconfiguration can expose sensitive information, potentially leading to security vulnerabilities."
+  description: "ASP.NET debug mode enabled misconfiguration exposes sensitive information, increasing the risk of security vulnerabilities."
   details: >
-          The Rails Debug Mode Enabled misconfiguration occurs when the Ruby on Rails framework is 
-          configured to run in debug mode, allowing detailed error information to be displayed in 
-          responses. This can expose sensitive information, such as full file paths, database details, 
-          and stack traces, to potential attackers. By analyzing the debug output, attackers can gain 
-          insights into the application's internals and potentially exploit vulnerabilities. This 
-          misconfiguration falls under the Security Misconfiguration category and has a low severity 
-          level. Disabling debug mode in production environments is essential to prevent information 
-          disclosure and enhance the application's security posture.
-  impact: "Enabling Rails debug mode can expose sensitive information, increasing the risk of security vulnerabilities and potential attacks."
- category:
-    name: SM
-    shortName: Misconfiguration
-    displayName: Security Misconfiguration (SM)
+        The ASP.NET Debug Mode Enabled misconfiguration occurs when an ASP.NET application is configured to run 
+        in debug mode, allowing detailed error information to be displayed in responses. This can expose sensitive
+         information, including full file paths, database details, and stack traces, to potential attackers. By 
+         analyzing the debug output, attackers can gain insights into the application's internals and potentially 
+         exploit vulnerabilities. This misconfiguration falls under the Security Misconfiguration category and has 
+         a low severity level. Disabling debug mode in production environments is crucial to prevent information 
+         disclosure and enhance the application's security posture.
+  impact: "Enabling ASP.NET debug mode exposes sensitive information, increasing the risk of security vulnerabilities and potential attacks."
+  category:
+      name: SM
+      shortName: Misconfiguration
+      displayName: Security Misconfiguration (SM)
   subCategory: ASP_DEBUG_MODE_ENABLED
   severity: LOW
   tags: 
@@ -36,10 +35,24 @@ execute:
   type: single
   requests:
     - req:
-      - modify_url: ${urlVar}cy8Ku20LH6V6Yc0q0pJX
+      - modify_url: ${urlVar}Foobar-debug.aspx
+      - modify_method: DEBUG
+      - modify_header:
+          Command: stop-debug
+      - modify_header:
+          Accept: "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8"
+      - modify_header:
+          Content-Length: 2
 
 validate:
+  response_code: 
+    eq: 200
   response_payload:
     contains_all: 
-      - "Rails.root:"
-      - "Action Controller: Exception caught"
+      - "OK"
+  response_headers:
+    for_one:
+      key:
+        contains_either: Content-Type
+      value:
+        contains_either: 2
