--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/DetectSpringBootLoggingActuator.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/DetectSpringBootLoggingActuator.yaml
@@ -1,18 +1,16 @@
 id: DETECT_SPRING_BOOT_LOGGING_ACTUATOR
 info:
   name: Detect Spring Boot Logging Actuator 
-  description: Express debug mode enabled misconfiguration can expose sensitive information, potentially leading to security vulnerabilities.
+  description: Detect Spring Boot Logging Actuator misconfiguration for potential information disclosure vulnerability.
   details: >
-       The Express Debug Mode Enabled misconfiguration occurs when the Express.js framework is 
-       configured to run in debug mode, allowing detailed error information to be displayed in 
-       responses. This can expose sensitive information, such as file paths, stack traces, and 
-       internal implementation details, to potential attackers. By analyzing the debug output, 
-       attackers can gain insights into the application's structure and potentially exploit 
-       vulnerabilities. This misconfiguration falls under the Security Misconfiguration category and 
-       has a low severity level. Disabling debug mode in production environments is crucial to prevent 
-       information disclosure and enhance the application's security posture.
-  impact: Enabling Express debug mode can expose sensitive information, increasing the risk of security vulnerabilities and potential attacks.
- category:
+      The Detect Spring Boot Logging Actuator test aims to identify misconfigurations in the Spring Boot Logging
+      Actuator, which can lead to information disclosure vulnerabilities. By sending a request to the /logfile 
+      endpoint, the test checks if the response contains sensitive information such as error logs or log file 
+      paths. This misconfiguration falls under the Security Misconfiguration category with a low severity level. 
+      Information disclosure through logging can expose sensitive data and aid attackers in understanding the 
+      application's behavior, potentially leading to further exploitation or attacks.
+  impact: Misconfigured Spring Boot Logging Actuator exposes sensitive information, increasing the risk of information disclosure and potential attacks.
+  category:
     name: SM
     shortName: Misconfiguration
     displayName: Security Misconfiguration (SM)
