--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/StrutsDebugModeEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/StrutsDebugModeEnabled.yaml
@@ -12,10 +12,10 @@ info:
           and has a low severity level. Properly disabling debug mode is crucial to prevent 
            information disclosure and enhance the overall security of the application.
   impact: "Exposing Struts debug mode can disclose sensitive information, increasing the risk of security vulnerabilities and potential attacks."
- category:
-    name: SM
-    shortName: Misconfiguration
-    displayName: Security Misconfiguration (SM)
+  category:
+      name: SM
+      shortName: Misconfiguration
+      displayName: Security Misconfiguration (SM)
   subCategory: STRUTS_DEBUG_MODE_ENABLED
   severity: LOW
   tags: 
@@ -37,10 +37,11 @@ execute:
   type: single
   requests:
     - req:
-      - modify_url: ${urlVar}
+      - modify_url: ${urlVar}?debug=xml
 
 validate:
   response_payload:
-    contains_all: 
-      - "<debug>"
-      - "<struts.actionMapping>"
+      contains_either: 
+        - "<debug>"
+        - "<struts.actionMapping>"
+        - "Stacktraces"
