creating filter for growth tools and removing duplicate code

--- a/apps/dashboard/web/WEB-INF/web.xml
+++ b/apps/dashboard/web/WEB-INF/web.xml
@@ -67,6 +67,14 @@
         <url-pattern>/tools/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>GrowthToolsFilter</filter-name>
+        <filter-class>com.akto.filter.GrowthToolsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>GrowthToolsFilter</filter-name>
+        <url-pattern>/tools/*</url-pattern>
+    </filter-mapping>
 
     <filter>
         <filter-name>UserDetailsFilter</filter-name>
