add Rails Debug Mode Enabled Test

--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/RailsDebugModeEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/RailsDebugModeEnabled.yaml
@@ -37,10 +37,10 @@ execute:
   type: single
   requests:
     - req:
-      - modify_url: ${urlVar}cy8Ku20LH6V6Yc0q0pJX
+      - modify_url: ${urlVar}/cy8Ku20LH6V6Yc0q0pJX
 
 validate:
   response_payload:
     contains_all: 
       - "Rails.root:"
-      - "Action Controller: Exception caught"
+      - "Trace"
