--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/RailsDebugModeEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/RailsDebugModeEnabled.yaml
@@ -19,6 +19,7 @@ info:
   subCategory: RAILS_DEBUG_MODE_ENABLED
   severity: LOW
   tags: 
+    - Rails
     - Business logic
     - OWASP top 10
     - HackerOne top 10
