modify subcategory and add express test

--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/LaravelDebugModeEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/LaravelDebugModeEnabled.yaml
@@ -16,7 +16,7 @@ info:
       name: SM
       shortName: Misconfiguration
       displayName: Security Misconfiguration (SM)
-  subCategory: LARAVEL_DEBUG_MODE_ENABLED
+  subCategory: Server Misconfiguration
   severity: LOW
   tags: 
     - Laravel
