--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/NginxDefaultPageEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/NginxDefaultPageEnabled.yaml
@@ -14,7 +14,7 @@ info:
       name: SM
       shortName: Misconfiguration
       displayName: Security Misconfiguration (SM)
-  subCategory: STRUTS_DEBUG_MODE_ENABLED
+  subCategory: Server Misconfiguration
   severity: LOW
   tags: 
     - NGINX
