--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SpringBootBeansActuatorExposed.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SpringBootBeansActuatorExposed.yaml
@@ -14,7 +14,7 @@ info:
       name: SM
       shortName: Misconfiguration
       displayName: Security Misconfiguration (SM)
-  subCategory: SPRING_BOOT_BEANS_ACTUATOR_EXPOSED
+  subCategory: Server Misconfiguration
   severity: LOW
   tags: 
     - Spring Boot
