--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SpringBootThreadDumpActuatorExposed.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SpringBootThreadDumpActuatorExposed.yaml
@@ -16,7 +16,7 @@ info:
       name: SM
       shortName: Misconfiguration
       displayName: Security Misconfiguration (SM)
-  subCategory: SPRING_BOOT_THREAD_DUMP_ACTUATOR_EXPOSED
+  subCategory: Server Misconfiguration
   severity: LOW
   tags: 
     - Spring Boot
