--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/DjangoDefaultHomepageEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/DjangoDefaultHomepageEnabled.yaml
@@ -15,7 +15,7 @@ info:
       name: SM
       shortName: Misconfiguration
       displayName: Security Misconfiguration (SM)
-  subCategory: DJANGO_DEFAULT_HOMEPAGE_ENABLED
+  subCategory: Server Misconfiguration
   severity: LOW
   tags: 
     - Django
