--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/LaravelDefaultHomepageEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/LaravelDefaultHomepageEnabled.yaml
@@ -13,7 +13,7 @@ info:
       name: SM
       shortName: Misconfiguration
       displayName: Security Misconfiguration (SM)
-  subCategory: LARAVEL_DEFAULT_HOMEPAGE_ENABLED
+  subCategory: Server Misconfiguration
   severity: LOW
   tags: 
     - Laravel
