--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/LaravelTelescopeEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/LaravelTelescopeEnabled.yaml
@@ -16,7 +16,7 @@ info:
       name: SM
       shortName: Misconfiguration
       displayName: Security Misconfiguration (SM)
-  subCategory: LARAVEL_TELESCOPE_ENABLED
+  subCategory: Server Misconfiguration
   severity: LOW
   tags: 
     - Laravel
