--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/NginxServerVersionDisclosed.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/NginxServerVersionDisclosed.yaml
@@ -14,7 +14,7 @@ info:
       name: SM
       shortName: Misconfiguration
       displayName: Security Misconfiguration (SM)
-  subCategory: NGINX_SERVER_VERSION_DISCLOSED
+  subCategory: Server Misconfiguration
   severity: LOW
   tags: 
     - NGINX
