--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/StrutsDebugModeEnabled.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/StrutsDebugModeEnabled.yaml
@@ -16,7 +16,7 @@ info:
       name: SM
       shortName: Misconfiguration
       displayName: Security Misconfiguration (SM)
-  subCategory: STRUTS_DEBUG_MODE_ENABLED
+  subCategory: Server Misconfiguration
   severity: LOW
   tags: 
     - Business logic
