--- a/.github/workflows/csvUpdate.yml
+++ b/.github/workflows/csvUpdate.yml
@@ -16,7 +16,15 @@ jobs:
         id: run_script
         run: |
           python3 -m pip install --upgrade pip
-          python3 -m pip install requests
+          python3 -m pip install requests==2.31.0
+          python3 -m pip install requests-oauthlib==1.3.1
+          python3 -m pip install requests-toolbelt==1.0.0
+          python3 -m pip install PyYAML==6.0
+          python3 -m pip install gitdb==4.0.10
+          python3 -m pip install github3.py==4.0.1
+          python3 -m pip install GitPython==3.1.31
+          python3 -m pip install PyGithub==1.59.0
+          python3 -m pip install aiohttp==3.8.1
           python3 - <<EOF
           import os
           import csv
