--- a/.github/workflows/csvUpdate.yml
+++ b/.github/workflows/csvUpdate.yml
@@ -3,10 +3,8 @@ name: Python Script Runner with CSV Report
 on:
   workflow_dispatch
 
-  # Allows you to run this workflow manually from the Actions tab
-
 jobs:
-  push-release-notes:
+  csv-update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -16,6 +14,7 @@ jobs:
         id: run_script
         run: |
           python3 -m pip install --upgrade pip
+          
           python3 -m pip install requests==2.31.0
           python3 -m pip install requests-oauthlib==1.3.1
           python3 -m pip install requests-toolbelt==1.0.0
