modify test names

--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/PageDos.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/PageDos.yaml
@@ -1,6 +1,6 @@
 id: PAGINATION_MISCONFIGURATION
 info:
-  name: Possible Dos by Pagination misconfiguration
+  name: Possible DOS attack by Pagination misconfiguration
   description: "Quite often, APIs do not impose any restrictions on the size or number of resources that can be requested by the user."
   details: "Such vulnerabilities arise when there is no max limit imposed on the number of resources returned. Typically, the number of objects to be returned is provided by a parameter in the API call. An attacker can set it as a large number. "
   impact: "This can impact the API server performance, leading to  Denial of Service (DoS). It also leaves the door open to authentication flaws such as brute force."
