--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/DjangoUrlExposed.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/DjangoUrlExposed.yaml
@@ -1,6 +1,6 @@
 id: DJANGO_URL_EXPOSED
 info:
-  name: Django url exposed
+  name: Django url exposed due to debug mode enable
   description: "The error response contains information related to urls which may help in more sophisticated attacks"
   details: >
             "The endpoint appears to be give out information related to endpoints existing in the application, on trying an invalid request, possibly due to DJANGO DEBUG mode being enabled. The original request
