--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/InvalidFileInput.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/InvalidFileInput.yaml
@@ -1,6 +1,6 @@
 id: INVALID_FILE_INPUT
 info:
-  name: Invalid File Input
+  name: Invalid File Input Leaking Sensitive Details Via Verbose Error Message
   description: "The error response contains information which may help in more sophisticated attacks"
   details: >
           "The error response contains information about the database or an inconsistent error message.<br>"
