--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MustContainResponseHeaders.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/MustContainResponseHeaders.yaml
@@ -1,6 +1,6 @@
 id: MUST_CONTAIN_RESPONSE_HEADERS
 info:
-  name: Must contain response headers
+  name: Missing HTTP Response Headers
   description: "The response does not contain some HTTP security headers."
   details: >
             "The endpoint seems to be missing some HTTP security headers which provide yet another layer of 
