--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SSRFOnAWSMetaEndpointAbusingEnclosedAlphanumerics.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SSRFOnAWSMetaEndpointAbusingEnclosedAlphanumerics.yaml
@@ -1,6 +1,6 @@
 id: SSRF_ON_AWS_META_ENDPOINT_ENCLOSED
 info:
-  name: "Sensitive AWS details exposed via replacing url param with encoded url"
+  name: "Sensitive AWS details exposed via replacing url param with encoded url due to SSRF"
   description: "The endpoint appears to be vulnerable to Server Side Request Forgery attack. The original request was replayed by replacing the URI parameter with metadata endpoint provided by AWS in enclosed alphanumerics. The application responded with 2XX success code and also gave out sensitive AWS information in response."
   details: >
     "The endpoint appears to be vulnerable to Server Side Request Forgery attack. The original request was replayed by replacing the URI parameter with metadata endpoint provided by AWS in enclosed alphanumerics. The application responded with 2XX success code and also gave out sensitive AWS information in response. Server-Side Request Forgery (SSRF) flaws occur whenever an API is fetching a remote resource without validating the user-supplied URL. It allows an attacker to coerce the application to send a crafted request to an unexpected destination, even when protected by a firewall or a VPN.\n
