--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SSRFOnLocalhostEncoded.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SSRFOnLocalhostEncoded.yaml
@@ -1,6 +1,6 @@
 id: SSRF_ON_LOCALHOST_ENCODED
 info:
-  name: "Sensitive localhost details exposed via replacing URI param to encoded localhost/admin"
+  name: "Sensitive localhost details exposed via replacing URI param to encoded localhost/admin due to SSRF"
   description: "The endpoint appears to be vulnerable to Server Side Request Forgery attack. The original request was replayed by replacing the URI parameter with localhost/admin in an encoded format. The application responded with 2XX success code and also gave out admin-related details." 
   details: >
             "The endpoint appears to be vulnerable to Server Side Request Forgery attack. The original request was replayed by replacing the URI parameter with localhost/admin in an encoded format. The application responded with 2XX success code and also gave out admin-related details.
