--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/JwtAddJku.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/JwtAddJku.yaml
@@ -16,7 +16,7 @@ info:
             if the token contains a \"username\": \"joe\" claim, they could change this to \"username\": \"admin\"."
   category:
     name: NO_AUTH
-    shortName: Broken Authentication
+    shortName: Broken User Authentication
     displayName: Broken User Authentication (BUA)
   subCategory: ADD_JKU_TO_JWT
   severity: HIGH
