--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/JwtInvalidSignature.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/JwtInvalidSignature.yaml
@@ -14,7 +14,7 @@ info:
             contains a \"username\": \"joe\" claim, they could change this to \"username\": \"admin\"."
   category:
     name: NO_AUTH
-    shortName: Broken Authentication
+    shortName: Broken User Authentication
     displayName: Broken User Authentication (BUA)
   subCategory: JWT_INVALID_SIGNATURE
   severity: HIGH
